Split Leg into interface and three implementing classes