@@ -4,20 +4,15 @@ import static org.opentripplanner.routing.algorithm.raptor.transit.cost.RaptorCo
 
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.List;
 import java.util.TimeZone;
-import org.locationtech.jts.geom.Coordinate;
-import org.opentripplanner.common.geometry.SphericalDistanceLibrary;
-import org.opentripplanner.model.TripPattern;
-import org.opentripplanner.model.calendar.ServiceDate;
 import org.opentripplanner.common.geometry.GeometryUtils;
 import org.opentripplanner.model.plan.Itinerary;
 import org.opentripplanner.model.plan.Leg;
 import org.opentripplanner.model.plan.Place;
-import org.opentripplanner.model.plan.StopArrival;
+import org.opentripplanner.model.plan.ScheduledTransitLeg;
+import org.opentripplanner.model.plan.StreetLeg;
 import org.opentripplanner.model.transfer.ConstrainedTransfer;
 import org.opentripplanner.routing.algorithm.raptor.transit.AccessEgress;
 import org.opentripplanner.routing.algorithm.raptor.transit.Transfer;
@@ -34,7 +29,6 @@ import org.opentripplanner.routing.graph.Edge;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.graph.Vertex;
 import org.opentripplanner.routing.spt.GraphPath;
-import org.opentripplanner.routing.trippattern.TripTimes;
 import org.opentripplanner.transit.raptor.api.path.AccessPathLeg;
 import org.opentripplanner.transit.raptor.api.path.EgressPathLeg;
 import org.opentripplanner.transit.raptor.api.path.Path;
@@ -82,10 +76,9 @@ public class RaptorPathToItineraryMapper {
     public Itinerary createItinerary(Path<TripSchedule> path) {
         var optimizedPath = path instanceof OptimizedPath
                 ? (OptimizedPath<TripSchedule>) path : null;
-        List<Leg> legs = new ArrayList<>();
 
         // Map access leg
-        legs.addAll(mapAccessLeg(path.accessLeg()));
+        List<Leg> legs = new ArrayList<>(mapAccessLeg(path.accessLeg()));
 
         PathLeg<TripSchedule> pathLeg = path.accessLeg().nextLeg();
 
@@ -114,7 +107,6 @@ public class RaptorPathToItineraryMapper {
         EgressPathLeg<TripSchedule> egressPathLeg = pathLeg.asEgressLeg();
         Itinerary mapped = mapEgressLeg(egressPathLeg);
         legs.addAll(mapped == null ? List.of() : mapped.legs);
-        propagateStopPlaceNamesToWalkingLegs(legs);
 
         Itinerary itinerary = new Itinerary(legs);
 
@@ -151,13 +143,7 @@ public class RaptorPathToItineraryMapper {
             TransitPathLeg<TripSchedule> pathLeg,
             boolean firstLeg
     ) {
-
-        var boardStop = transitLayer.getStopByIndex(pathLeg.fromStop());
-        var alightStop = transitLayer.getStopByIndex(pathLeg.toStop());
         TripSchedule tripSchedule = pathLeg.trip();
-        TripTimes tripTimes = tripSchedule.getOriginalTripTimes();
-
-        Leg leg = new Leg(tripTimes.getTrip());
 
         // Find stop positions in pattern where this leg boards and alights.
         // We cannot assume every stop appears only once in a pattern, so we
@@ -169,56 +155,19 @@ public class RaptorPathToItineraryMapper {
             pathLeg.toTime(), pathLeg.toStop()
         );
 
-        // Include real-time information in the Leg.
-        if (!tripTimes.isScheduled()) {
-            leg.setRealTime(true);
-            leg.setDepartureDelay(tripTimes.getDepartureDelay(boardStopIndexInPattern));
-            leg.setArrivalDelay(tripTimes.getArrivalDelay(alightStopIndexInPattern));
-        }
-
-        leg.setServiceDate(new ServiceDate(tripSchedule.getServiceDate()));
-        leg.setStartTime(createCalendar(pathLeg.fromTime()));
-        leg.setEndTime(createCalendar(pathLeg.toTime()));
-        leg.setFrom(Place.forStop(boardStop));
-        leg.setTo(Place.forStop(alightStop));
-        List<Coordinate> transitLegCoordinates = extractTransitLegCoordinates(pathLeg, boardStopIndexInPattern, alightStopIndexInPattern);
-        leg.setLegGeometry(GeometryUtils.makeLineString(transitLegCoordinates));
-        leg.setDistanceMeters(getDistanceFromCoordinates(transitLegCoordinates));
-
-        // intermediate stops are required for fare calculation that's why we always add them here
-        // and remove them in the API layers after the fare calculation if they were not requested.
-        leg.setIntermediateStops(
-                extractIntermediateStops(pathLeg, boardStopIndexInPattern, alightStopIndexInPattern));
-
-        leg.setHeadsign(tripTimes.getHeadsign(boardStopIndexInPattern));
-        leg.setWalkSteps(new ArrayList<>());
-        leg.setGeneralizedCost(toOtpDomainCost(pathLeg.generalizedCost()));
-
-        leg.setDropOffBookingInfo(tripTimes.getDropOffBookingInfo(boardStopIndexInPattern));
-        leg.setPickupBookingInfo(tripTimes.getPickupBookingInfo(boardStopIndexInPattern));
-
-        leg.setTransferToNextLeg((ConstrainedTransfer) pathLeg.getConstrainedTransferAfterLeg());
-        leg.setTransferFromPrevLeg(
-                prevTransitLeg == null ? null : prevTransitLeg.getTransferToNextLeg());
-
-        leg.setBoardStopPosInPattern(boardStopIndexInPattern);
-        leg.setAlightStopPosInPattern(alightStopIndexInPattern);
-
-        leg.setBoardingGtfsStopSequence(tripTimes.getOriginalGtfsStopSequence(boardStopIndexInPattern));
-        leg.setAlightGtfsStopSequence(tripTimes.getOriginalGtfsStopSequence(alightStopIndexInPattern));
-
-        // TODO OTP2 - alightRule and boardRule needs mapping
-        //    Under Raptor, for transit trips, ItineraryMapper converts Path<TripSchedule> directly to Itinerary
-        //    (the old API response element, within TripPlan). Non-transit trips still use GraphPathToTripPlanConverter
-        //    to turn A* results (sequences of States and Edges called GraphPaths) into TripPlans which also contain
-        //    Itineraries.
-        //    So transit results do not go through GraphPathToTripPlanConverter. It contains logic to find board/alight
-        //    rules from StopPatterns within TripPatterns, and attach them as machine-readable codes on Legs, but only
-        //    where you are really boarding or alighting (considering interlining / in-seat transfers).
-        //    That needs to be re-implemented for the Raptor transit case.
-        //    - See e2118e0a -> GraphPathToTripPlanConverter#fixupLegs(List<Leg>, State[][]))
-        // leg.alightRule = <Assign here>;
-        // leg.boardRule =  <Assign here>;
+        ScheduledTransitLeg leg = new ScheduledTransitLeg(
+                tripSchedule.getOriginalTripTimes(),
+                tripSchedule.getOriginalTripPattern(),
+                boardStopIndexInPattern,
+                alightStopIndexInPattern,
+                createCalendar(pathLeg.fromTime()),
+                createCalendar(pathLeg.toTime()),
+                tripSchedule.getServiceDate(),
+                transitSearchTimeZero.getZone().normalized(),
+                (prevTransitLeg == null ? null : prevTransitLeg.getTransferToNextLeg()),
+                (ConstrainedTransfer) pathLeg.getConstrainedTransferAfterLeg(),
+                toOtpDomainCost(pathLeg.generalizedCost())
+        );
 
         AlertToLegMapper.addTransitAlertPatchesToLeg(
             graph,
@@ -264,17 +213,17 @@ public class RaptorPathToItineraryMapper {
     ) {
         List<Edge> edges = transfer.getEdges();
         if (edges == null || edges.isEmpty()) {
-            Leg leg = new Leg(transferMode);
-            leg.setFrom(from);
-            leg.setTo(to);
-            leg.setStartTime(createCalendar(pathLeg.fromTime()));
-            leg.setEndTime(createCalendar(pathLeg.toTime()));
-            leg.setLegGeometry(GeometryUtils.makeLineString(transfer.getCoordinates()));
-            leg.setDistanceMeters((double) transfer.getDistanceMeters());
-            leg.setWalkSteps(Collections.emptyList());
-            leg.setGeneralizedCost(toOtpDomainCost(pathLeg.generalizedCost()));
-
-            return List.of(leg);
+            return List.of(new StreetLeg(
+                    transferMode,
+                    createCalendar(pathLeg.fromTime()),
+                    createCalendar(pathLeg.toTime()),
+                    from,
+                    to,
+                    (double) transfer.getDistanceMeters(),
+                    toOtpDomainCost(pathLeg.generalizedCost()),
+                    GeometryUtils.makeLineString(transfer.getCoordinates()),
+                    List.of()
+            ));
         } else {
             // A RoutingRequest with a RoutingContext must be constructed so that the edges
             // may be re-traversed to create the leg(s) from the list of edges.
@@ -307,69 +256,10 @@ public class RaptorPathToItineraryMapper {
         }
     }
 
-    /**
-     * Fix up a {@link Place} using the information available at the leg boundaries. This method
-     * will ensure that stop names propagate correctly to the non-transit legs that connect to
-     * transit legs.
-     */
-    public static void propagateStopPlaceNamesToWalkingLegs(List<Leg> legs) {
-        for (int i = 0; i < legs.size()-1; i++) {
-            Leg currLeg = legs.get(i);
-            Leg nextLeg = legs.get(i + 1);
-
-            if (currLeg.isTransitLeg() && !nextLeg.isTransitLeg()) {
-                nextLeg.setFrom(currLeg.getTo());
-            }
-
-            if (!currLeg.isTransitLeg() && nextLeg.isTransitLeg()) {
-                currLeg.setTo(nextLeg.getFrom());
-            }
-        }
-    }
-
     private Calendar createCalendar(int timeInSeconds) {
         ZonedDateTime zdt = transitSearchTimeZero.plusSeconds(timeInSeconds);
         Calendar c = Calendar.getInstance(TimeZone.getTimeZone(zdt.getZone()));
         c.setTimeInMillis(zdt.toInstant().toEpochMilli());
         return c;
-    }
-
-    private List<StopArrival> extractIntermediateStops(TransitPathLeg<TripSchedule> pathLeg, int boardStopIndexInPattern, int alightStopIndexInPattern) {
-        List<StopArrival> visits = new ArrayList<>();
-        TripPattern tripPattern = pathLeg.trip().getOriginalTripPattern();
-        TripSchedule tripSchedule = pathLeg.trip();
-
-        for (int i = boardStopIndexInPattern + 1; i < alightStopIndexInPattern; i++) {
-            var stop = tripPattern.getStop(i);
-
-            StopArrival visit = new StopArrival(
-                Place.forStop(stop),
-                createCalendar(tripSchedule.arrival(i)),
-                createCalendar(tripSchedule.departure(i)),
-                i,
-                tripSchedule.getOriginalTripTimes().getOriginalGtfsStopSequence(i)
-            );
-            visits.add(visit);
-        }
-        return visits;
-    }
-
-    private List<Coordinate> extractTransitLegCoordinates(TransitPathLeg<TripSchedule> pathLeg, int boardStopIndexInPattern, int alightStopIndexInPattern) {
-        List<Coordinate> transitLegCoordinates = new ArrayList<>();
-        TripPattern tripPattern = pathLeg.trip().getOriginalTripPattern();
-
-        for (int i = boardStopIndexInPattern + 1; i <= alightStopIndexInPattern; i++) {
-            transitLegCoordinates.addAll(Arrays.asList(tripPattern.getHopGeometry(i - 1).getCoordinates()));
-        }
-
-        return transitLegCoordinates;
-    }
-
-    private double getDistanceFromCoordinates(List<Coordinate> coordinates) {
-        double distance = 0;
-        for (int i = 1; i < coordinates.size(); i++) {
-            distance += SphericalDistanceLibrary.distance(coordinates.get(i), coordinates.get(i - 1));
-        }
-        return distance;
     }
 }
